<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>k2_nc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jdham@iastate.edu">Jakob Hamilton</maintainer>
  <license>MIT</license>

  <build_depend>ament_cmake</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
